--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,16 @@ body {
 a {
   color: #00B7FF;
 }
+
+input[type="checkbox"] {
+    display:none;
+}
+input[type="checkbox"] + label {
+    display:inline-block;
+    padding: 10px;
+}
+
+input[type="checkbox"]:checked + label {
+    display:inline-block;
+    background-color: green;
+}
