servicio de agragar producto con test de caso feliz

--- a/views/newProduct.jade
+++ b/views/newProduct.jade
@@ -2,19 +2,14 @@ include layout
 
 form(action='createProduct' method='post')
 	label(for='code') Codigo:
-	input(type='text', label='talle', id='code', name='code')
+	input(type='text', id='code', name='code', required)
 	br
 	label(for='description') Descripcion:
 	input(type='text', id='description', name='description')
 	br
-	label(for='size') Talle:
-	- each size in sizes
-		input(type='checkbox' id='#{size}' name='size[]')
-		label(for='#{size}') #{size}
-	br
-	label(for='type') Tipo:
-	- each type in types
-		input(type='checkbox' id='#{type}' name='#{type}')
-		label(for='#{type}') #{type}
-	br
+	//generacion con radioButtonsDinamicMenu
+	- options=factory; optionsName="factory"
+	include radioButtonsDinamicMenu
+	- options=types; optionsName="type"
+	include radioButtonsDinamicMenu
 	input(type='submit' value='Enviar')
