--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,4 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src="http://code.jquery.com/jquery-1.9.1.min.js")
+    script(src="javascript/formsUtils.js")
   body!= body
